--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,6 +3,8 @@
         "logIn": "Войти",
         "signUp": "Зарегестрироваться",
         "emailPlaceholder": "Электронная почта",
+        "loginPlaceholder": "Логин",
+        "usernamePlaceholder": "Отображаемое имя",
         "passwordPlaceholder": "Пароль",
         "youDontHaveAnAccount": "У вас еще нет аккаунта?"
         
