feat: DF-3 | fix spelling errors

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,12 +1,12 @@
 {
     "auth": {
         "logIn": "Войти",
-        "signUp": "Зарегестрироваться",
+        "signUp": "Зарегистрироваться",
         "emailPlaceholder": "Электронная почта",
         "loginPlaceholder": "Логин",
         "usernamePlaceholder": "Отображаемое имя",
         "passwordPlaceholder": "Пароль",
-        "youDontHaveAnAccount": "У вас еще нет аккаунта?"
-        
+        "youDontHaveAnAccount": "У вас еще нет аккаунта?",
+        "youAlreadyHaveAnAccount": "У вас уже есть аккаунт?"
     }
 }
