--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -13,6 +13,8 @@
         "emptyPassword": "Введите пароль",
         "emptyName": "Введите имя",
         "emptyUserName": "Введите отображаемое имя пользователя",
-        "сharactersCount": "Поле должно содержать от 8 до 32 символов"
+        "сharactersCount": "Поле должно содержать от 8 до 32 символов",
+        "passwordConfirm": "Подтвердите пароль",
+        "mutchPassword": "Пароли должны совпадать"
     }
 }
