--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -15,6 +15,8 @@
         "emptyUserName": "Введите отображаемое имя пользователя",
         "сharactersCount": "Поле должно содержать от 8 до 32 символов",
         "passwordConfirm": "Подтвердите пароль",
-        "mutchPassword": "Пароли должны совпадать"
+        "mutchPassword": "Пароли должны совпадать",
+        "notFound": "Аккаунт не найден",
+        "alreadyTaken": "Имя пользователя или почта уже используется"
     }
 }
