--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -15,7 +15,7 @@
         "emptyUserName": "Введите отображаемое имя пользователя",
         "сharactersCount": "Поле должно содержать от 8 до 32 символов",
         "passwordConfirm": "Подтвердите пароль",
-        "mutchPassword": "Пароли должны совпадать",
+        "mutchConfirmPassword": "Пароли должны совпадать",
         "notFound": "Аккаунт не найден",
         "alreadyTaken": "Имя пользователя или почта уже используется"
     }
