--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,10 +3,20 @@
         "logIn": "Войти",
         "signUp": "Зарегистрироваться",
         "emailPlaceholder": "Электронная почта",
-        "loginPlaceholder": "Логин",
+        "namePlaceholder": "Имя",
         "usernamePlaceholder": "Отображаемое имя",
         "passwordPlaceholder": "Пароль",
         "dontHaveAnAccount": "У вас еще нет аккаунта?",
-        "alreadyHaveAnAccount": "У вас уже есть аккаунт?"
+        "alreadyHaveAnAccount": "У вас уже есть аккаунт?",
+        "errorEmail": "Введите корректную почту",
+        "emptyEmail": "Введите почту",
+        "emptyPassword": "Введите пароль",
+        "emptyName": "Введите имя",
+        "emptyUserName": "Введите отображаемое имя пользователя",
+        "сharactersCount": "Поле должно содержать от 8 до 32 символов",
+        "passwordConfirm": "Подтвердите пароль",
+        "matchConfirmPassword": "Пароли должны совпадать",
+        "notFound": "Аккаунт не найден",
+        "alreadyTaken": "Имя пользователя или почта уже используется"
     }
 }
