feat: DF-7 | add translation

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -18,5 +18,9 @@
         "matchConfirmPassword": "Пароли должны совпадать",
         "notFound": "Аккаунт не найден",
         "alreadyTaken": "Имя пользователя или почта уже используется"
+    },
+    "post": {
+        "share": "Поделиться",
+        "reply": "Ответить"
     }
 }
