feat: DF-9 | add textfield and buttons

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -21,6 +21,8 @@
     },
     "post": {
         "share": "Поделиться",
-        "reply": "Ответить"
+        "reply": "Ответить",
+        "accept": "Принять",
+        "cancel": "Отменить"
     }
 }
