feat: DF-9 | add translation

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -23,6 +23,7 @@
         "share": "Поделиться",
         "reply": "Ответить",
         "accept": "Принять",
-        "cancel": "Отменить"
+        "cancel": "Отменить",
+        "postDescription": "Описание к посту"
     }
 }
