feat: DF-9 | add snackbar with error

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -24,6 +24,7 @@
         "reply": "Ответить",
         "accept": "Принять",
         "cancel": "Отменить",
-        "postDescription": "Описание к посту"
+        "postDescription": "Описание к посту",
+        "ErrorSendPost": "Ошибка в создании поста"
     }
 }
