feat: DF-9 | form for create/edit posts (#33)
* feat: DF-9 | wip

* feat: DF-9 | add button for create post

* feat: DF-9 | add textfield and buttons

* feat: DF-9 | add global styles for scroll bar

* feat: DF-9 | add bg color to scrollbar

* feat: DF-9 | add props with gap to styled card content

* feat: DF-9 | add supports various image size and more kittens

* feat: DF-9 | fix linter err

* feat: DF-9 | WIP, create api

* feat: DF-9 | fix error message

* feat: DF-9 | change media bg color

* feat: DF-9 | create data api, add middleware

* feat: DF-9 | create file upload component

* feat: DF-9 | refactor folder name

* feat: DF-9 | refactor create post form component

* feat: DF-9 | set mui icon

* feat: DF-9 | change folder name

* feat: DF-9 | fix

* feat: DF-9 | add styled components

* feat: DF-9 | add translation

* feat: DF-9 | fix input size, delete spread credentials

* feat: DF-9 | add error message

* feat: DF-9 | add snackbar with error

* feat: DF-9 | change cred to arg

* feat: DF-9 | add success alert

* feat: DF-9 | add enqueue snackbar, fix post width

* feat: DF-9 | fix input size

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -21,6 +21,11 @@
     },
     "post": {
         "share": "Поделиться",
-        "reply": "Ответить"
+        "reply": "Ответить",
+        "accept": "Принять",
+        "cancel": "Отменить",
+        "postDescription": "Описание к посту",
+        "ErrorSendPost": "Ошибка в создании поста",
+        "SuccessSendPost": "Пост успешно создан"
     }
 }
