feat: DF-5 | move out username and name; remove unnecessary loader

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -48,5 +48,11 @@
         "edit": "Редактировать",
         "delete": "Удалить",
         "send": "Отправить"
+    },
+    "user": {
+        "followings": "Подписки",
+        "followers": "Подписчики",
+        "noFollowings": "Вы ещё ни на кого не подписаны",
+        "noFollowers": "Никто ещё не подписан на вас"
     }
 }
