feat: DF-6 | add translation

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -59,5 +59,10 @@
         "followers": "Подписчики",
         "noFollowings": "Вы ещё ни на кого не подписаны",
         "noFollowers": "Никто ещё не подписан на вас"
+    },
+    "header": {
+        "profile": "Профиль",
+        "createPost": "Создать пост",
+        "logout": "Выйти"
     }
 }
