--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -26,6 +26,51 @@
         "cancel": "Отменить",
         "postDescription": "Описание к посту",
         "ErrorSendPost": "Ошибка в создании поста",
+        "SuccessSendPost": "Пост успешно создан",
+        "like": "Нравится",
+        "actions": "Действия",
+        "more": "больше",
+        "less": "меньше",
+        "edit": "Редактировать",
+        "delete": "Удалить"
+    },
+    "comment": {
+        "creationTimeSeconds": "{{count}} секунду назад",
+        "creationTimeSeconds_few": "{{count}} секунды назад",
+        "creationTimeSeconds_many": "{{count}} секунд назад",
+        "creationTimeMinutes": "{{count}} минуту назад",
+        "creationTimeMinutes_few": "{{count}} минуты назад",
+        "creationTimeMinutes_many": "{{count}} минут назад",
+        "creationTimeHours": "{{count}} час назад",
+        "creationTimeHours_few": "{{count}} часа назад",
+        "creationTimeHours_many": "{{count}} часов назад",
+        "creationTimeDays": "{{count}} день назад",
+        "creationTimeDays_few": "{{count}} дня назад",
+        "creationTimeDays_many": "{{count}} дней назад",
+        "creationTimeWeeks": "{{count}} неделю назад",
+        "creationTimeWeeks_few": "{{count}} недели назад",
+        "creationTimeWeeks_many": "{{count}} недель назад",
+        "edit": "Редактировать",
+        "delete": "Удалить",
+        "send": "Отправить"
+    },
+    "user": {
+        "follow": "Подписаться",
+        "unfollow": "Отписаться",
+        "followings": "{{count}} подписка",
+        "followings_few": "{{count}} подписки",
+        "followings_many": "{{count}} подписок",
+        "followers": "{{count}} подписчик",
+        "followers_few": "{{count}} подписчика",
+        "followers_many": "{{count}} подписчиков",
+        "noFollowings": "Вы ещё ни на кого не подписаны",
+        "noFollowingsNotMe": "Этот пользователь ещё ни на кого не подписан",
+        "noFollowers": "Никто ещё не подписан на вас",
+        "noFollowersNotMe": "Никто ещё не подписан на этого пользователя",
+        "accept": "Принять",
+        "cancel": "Отменить",
+        "postDescription": "Описание к посту",
+        "ErrorSendPost": "Ошибка в создании поста",
         "SuccessSendPost": "Пост успешно создан"
     }
 }
