feat: DF-6 | create endless post feed (#39)
* feat: DF-5 | [WIP]

* feat: DB-5 | [WIP]

* feat: DF-5 | [WIP] create user page; post component need improvements

* feat: DB-5 | add comments

* feat: DF-5 | improved likes; divide comment on separate components; add post actions

* feat: DF-5 | refactor structure; add translation

* feat: DF-5 | [WIP]

* feat: DF-5 | add post delete ability

* feat: DB-5 | fix post media height

* feat: DF-5 | [WIP] add relations to user page

* feat: DF- 6 | [WIP]

* feat: DF-6 | [WIP]

* feat: DF-5 | add transform response to relations

* feat: DF-5 | remove unused

* feat: DF-5 | [WIP] some refactoring

* feat: DF-5 | fix home page post display

* feat: DF-5 | add transform for user avatar

* feat: DF-5 | fix comment avatar

* feat: DF-5 | move out username and name; remove unnecessary loader

* feat: DF-5 | add desription to user profile

* feat: DF-5 | fix posts size, styling, display on user page

* feat: DF-6 | change query name

* feat: DF-6 | [WIP]

* feat: DF-6 | add translation

* feat: DF-6 | [WIP]

* feat: DF-6 | delete old userpage component

* feat: DF-6 | add gap between postcard

* feat: DF-6 | add patch to infinity scroll and fix cache collision

* feat: DF-6 | create custom hook with scroll

* feat: DF-6 | change react node to react element

* feat: DF-9 | add more constants

---------

Co-authored-by: MangriMen <49300253+MangriMen@users.noreply.github.com>

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -72,5 +72,10 @@
         "postDescription": "Описание к посту",
         "ErrorSendPost": "Ошибка в создании поста",
         "SuccessSendPost": "Пост успешно создан"
+    },
+    "header": {
+        "profile": "Профиль",
+        "createPost": "Создать пост",
+        "logout": "Выйти"
     }
 }
