--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -25,8 +25,8 @@
         "accept": "Принять",
         "cancel": "Отменить",
         "postDescription": "Описание к посту",
-        "ErrorSendPost": "Ошибка в создании поста",
-        "SuccessSendPost": "Пост успешно создан",
+        "errorSendPost": "Ошибка в создании поста",
+        "successSendPost": "Пост успешно создан",
         "like": "Нравится",
         "actions": "Действия",
         "more": "больше",
