feat: DF-53 | fix theme; create share post dialog; create styled input

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -32,7 +32,10 @@
         "more": "больше",
         "less": "меньше",
         "edit": "Редактировать",
-        "delete": "Удалить"
+        "delete": "Удалить",
+        "copy": "Копировать",
+        "copied": "Ссылка скопирована в буфер обмена",
+        "close": "Закрыть"
     },
     "comment": {
         "writeComment": "Написать комментарий...",
