feat: DF-41 | create api for add avatar

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -80,6 +80,8 @@
   },
   "settings": {
     "information": "Информация",
-    "password": "Пароль"
+    "password": "Пароль",
+    "profile": "Профиль",
+    "saveChanges": "Сохранить изменения"
   }
 }
