--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -13,7 +13,7 @@
     "emptyPassword": "Введите пароль",
     "emptyName": "Введите имя",
     "emptyUserName": "Введите отображаемое имя пользователя",
-    "сharactersCount": "Поле должно содержать от 8 до 32 символов",
+    "сharactersCount": "Поле должно содержать до 32 символов",
     "passwordConfirm": "Подтвердите пароль",
     "matchConfirmPassword": "Пароли должны совпадать",
     "notFound": "Аккаунт не найден",
@@ -85,6 +85,7 @@
     "saveChanges": "Сохранить изменения",
     "aboutMe": "О себе",
     "username": "Имя пользователя",
-    "name": "Имя"
+    "name": "Имя",
+    "charactersCount": "Поле должно содержать до 32 символов"
   }
 }
