feat: DF-41 | editing user component (#78)
* feat: DF-41 | buttom style transfer to common files

* feat: DF-41 | transfef button style transfer

* feat: DF-41 | create user settings page

* feat: DF-41 | [WIP]

* feat: DF-41 | create api for add avatar

* feat: DF-41 | add button to show password

* feat: DF-41 | [WIP]

* feat: DF-41 | rework on grid, add helper text to about field to display number of characters

* feat: DF-41 | fix bug with symbols count

* feat: DF-41 | fix linter error

* feat: DF-41 | add fix flex inputs, fix breakpoints

* feat: DF-41 | fix merge conflicts

* feat: DF-41 | fix 'jumping' between components

* feat: DF-41 | fix button size, add snackbar notifications

* feat: DF-41 | add max avatar size

* feat: DF-41 | delete vite config

* feat: DF-41 | [WIP]

* feat: DF-41 | added change password, fix grid in styles

* feat: DF-41 | add snackbar

* feat: DF-41 | create Password and Username inputs, fix bugs

* feat: DF-41 | all auto-completions have been removed they don't work right

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,89 +1,110 @@
 {
-    "auth": {
-        "logIn": "Войти",
-        "signUp": "Зарегистрироваться",
-        "emailPlaceholder": "Электронная почта",
-        "namePlaceholder": "Имя",
-        "usernamePlaceholder": "Отображаемое имя",
-        "passwordPlaceholder": "Пароль",
-        "dontHaveAnAccount": "У вас еще нет аккаунта?",
-        "alreadyHaveAnAccount": "У вас уже есть аккаунт?",
-        "errorEmail": "Введите корректную почту",
-        "emptyEmail": "Введите почту",
-        "emptyPassword": "Введите пароль",
-        "emptyName": "Введите имя",
-        "emptyUserName": "Введите отображаемое имя пользователя",
-        "сharactersCount": "Поле должно содержать от 8 до 32 символов",
-        "passwordConfirm": "Подтвердите пароль",
-        "matchConfirmPassword": "Пароли должны совпадать",
-        "notFound": "Аккаунт не найден",
-        "alreadyTaken": "Имя пользователя или почта уже используется"
-    },
-    "post": {
-        "share": "Поделиться",
-        "reply": "Ответить",
-        "accept": "Принять",
-        "cancel": "Отменить",
-        "postDescription": "Описание к посту",
-        "errorSendPost": "Ошибка в создании поста",
-        "successSendPost": "Пост успешно создан",
-        "like": "Нравится",
-        "actions": "Действия",
-        "more": "больше",
-        "less": "меньше",
-        "edit": "Редактировать",
-        "delete": "Удалить",
-        "copy": "Копировать",
-        "copied": "Ссылка скопирована в буфер обмена",
-        "close": "Закрыть"
-    },
-    "comment": {
-        "writeComment": "Написать комментарий...",
-        "creationTimeSeconds": "{{count}} секунду назад",
-        "creationTimeSeconds_zero": "только что",
-        "creationTimeSeconds_few": "{{count}} секунды назад",
-        "creationTimeSeconds_many": "{{count}} секунд назад",
-        "creationTimeMinutes": "{{count}} минуту назад",
-        "creationTimeMinutes_few": "{{count}} минуты назад",
-        "creationTimeMinutes_many": "{{count}} минут назад",
-        "creationTimeHours": "{{count}} час назад",
-        "creationTimeHours_few": "{{count}} часа назад",
-        "creationTimeHours_many": "{{count}} часов назад",
-        "creationTimeDays": "{{count}} день назад",
-        "creationTimeDays_few": "{{count}} дня назад",
-        "creationTimeDays_many": "{{count}} дней назад",
-        "creationTimeWeeks": "{{count}} неделю назад",
-        "creationTimeWeeks_few": "{{count}} недели назад",
-        "creationTimeWeeks_many": "{{count}} недель назад",
-        "creationTimeMonth": "{{count}} месяц назад",
-        "creationTimeMonth_few": "{{count}} месяца назад",
-        "creationTimeMonth_many": "{{count}} месяцев назад",
-        "edit": "Редактировать",
-        "delete": "Удалить",
-        "send": "Отправить"
-    },
-    "user": {
-        "follow": "Подписаться",
-        "unfollow": "Отписаться",
-        "followings": "{{count}} подписка",
-        "followings_few": "{{count}} подписки",
-        "followings_many": "{{count}} подписок",
-        "followers": "{{count}} подписчик",
-        "followers_few": "{{count}} подписчика",
-        "followers_many": "{{count}} подписчиков",
-        "noFollowings": "Вы ещё ни на кого не подписаны",
-        "noFollowingsNotMe": "Этот пользователь ещё ни на кого не подписан",
-        "noFollowers": "Никто ещё не подписан на вас",
-        "noFollowersNotMe": "Никто ещё не подписан на этого пользователя",
-        "accept": "Принять",
-        "cancel": "Отменить",
-        "postDescription": "Описание к посту",
-        "ErrorSendPost": "Ошибка в создании поста",
-        "SuccessSendPost": "Пост успешно создан"
-    },
-    "header": {
-        "profile": "Профиль",
-        "createPost": "Создать пост",
-        "logout": "Выйти"
-    }
+  "auth": {
+    "logIn": "Войти",
+    "signUp": "Зарегистрироваться",
+    "emailPlaceholder": "Электронная почта",
+    "namePlaceholder": "Имя",
+    "usernamePlaceholder": "Отображаемое имя",
+    "passwordPlaceholder": "Пароль",
+    "dontHaveAnAccount": "У вас еще нет аккаунта?",
+    "alreadyHaveAnAccount": "У вас уже есть аккаунт?",
+    "errorEmail": "Введите корректную почту",
+    "emptyEmail": "Введите почту",
+    "emptyPassword": "Введите пароль",
+    "emptyName": "Введите имя",
+    "emptyUserName": "Введите отображаемое имя пользователя",
+    "сharactersCount": "Поле должно содержать от 8 до 32 символов",
+    "passwordConfirm": "Подтвердите пароль",
+    "matchConfirmPassword": "Пароли должны совпадать",
+    "notFound": "Аккаунт не найден",
+    "alreadyTaken": "Имя пользователя или почта уже используется"
+  },
+  "post": {
+    "share": "Поделиться",
+    "reply": "Ответить",
+    "accept": "Принять",
+    "cancel": "Отменить",
+    "postDescription": "Описание к посту",
+    "errorSendPost": "Ошибка в создании поста",
+    "successSendPost": "Пост успешно создан",
+    "like": "Нравится",
+    "actions": "Действия",
+    "more": "больше",
+    "less": "меньше",
+    "edit": "Редактировать",
+    "delete": "Удалить",
+    "copy": "Копировать",
+    "copied": "Ссылка скопирована в буфер обмена",
+    "close": "Закрыть"
+  },
+  "comment": {
+    "writeComment": "Написать комментарий...",
+    "creationTimeSeconds": "{{count}} секунду назад",
+    "creationTimeSeconds_zero": "только что",
+    "creationTimeSeconds_few": "{{count}} секунды назад",
+    "creationTimeSeconds_many": "{{count}} секунд назад",
+    "creationTimeMinutes": "{{count}} минуту назад",
+    "creationTimeMinutes_few": "{{count}} минуты назад",
+    "creationTimeMinutes_many": "{{count}} минут назад",
+    "creationTimeHours": "{{count}} час назад",
+    "creationTimeHours_few": "{{count}} часа назад",
+    "creationTimeHours_many": "{{count}} часов назад",
+    "creationTimeDays": "{{count}} день назад",
+    "creationTimeDays_few": "{{count}} дня назад",
+    "creationTimeDays_many": "{{count}} дней назад",
+    "creationTimeWeeks": "{{count}} неделю назад",
+    "creationTimeWeeks_few": "{{count}} недели назад",
+    "creationTimeWeeks_many": "{{count}} недель назад",
+    "creationTimeMonth": "{{count}} месяц назад",
+    "creationTimeMonth_few": "{{count}} месяца назад",
+    "creationTimeMonth_many": "{{count}} месяцев назад",
+    "edit": "Редактировать",
+    "delete": "Удалить",
+    "send": "Отправить"
+  },
+  "user": {
+    "follow": "Подписаться",
+    "unfollow": "Отписаться",
+    "followings": "{{count}} подписка",
+    "followings_few": "{{count}} подписки",
+    "followings_many": "{{count}} подписок",
+    "followers": "{{count}} подписчик",
+    "followers_few": "{{count}} подписчика",
+    "followers_many": "{{count}} подписчиков",
+    "noFollowings": "Вы ещё ни на кого не подписаны",
+    "noFollowingsNotMe": "Этот пользователь ещё ни на кого не подписан",
+    "noFollowers": "Никто ещё не подписан на вас",
+    "noFollowersNotMe": "Никто ещё не подписан на этого пользователя",
+    "accept": "Принять",
+    "cancel": "Отменить",
+    "postDescription": "Описание к посту",
+    "ErrorSendPost": "Ошибка в создании поста",
+    "SuccessSendPost": "Пост успешно создан"
+  },
+  "header": {
+    "profile": "Профиль",
+    "createPost": "Создать пост",
+    "logout": "Выйти"
+  },
+  "settings": {
+    "information": "Информация",
+    "password": "Пароль",
+    "profile": "Профиль",
+    "saveChanges": "Сохранить изменения",
+    "aboutMe": "О себе",
+    "username": "Имя пользователя",
+    "name": "Имя",
+    "charactersCount": "Поле должно содержать до 32 символов",
+    "successSettingsSave": "Изменения сохранены",
+    "errorSettingsSave": "Не удалось сохранить изменения",
+    "avatarSizeToLarge": "Размер изображения не должен превышать 2MB",
+    "currentPassword": "Текущий пароль",
+    "newPassword": "Новый пароль",
+    "newPasswordConfirm": "Подтверждение нового пароля",
+    "successChangePassword": "Пароль успешно изменен",
+    "errorChangePassword": "Текущий пароль недействителен",
+    "сharactersCount": "Поле должно содержать от 8 до 32 символов",
+    "matchConfirmPassword": "Пароли должны совпадать",
+    "emptyPassword": "Введите пароль"
+  }
 }
