feat: DF-102 | add emoji picker to post and comment creation

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -38,6 +38,7 @@
     "close": "Закрыть"
   },
   "comment": {
+    "emoji": "Эмодзи",
     "writeComment": "Написать комментарий...",
     "creationTimeSeconds": "{{count}} секунду назад",
     "creationTimeSeconds_zero": "только что",
