feat: DF-102 | imrpove comment input (#104)
* feat: DF-102 | add multiline to post and comments

* feat: DF-102 | add sending comment on enter

* feat: DF-102 | fix comment send button on the bottom

* feat: DF-102 | add emoji picker to post and comment creation

* feat: DF-102 | fix lockfile conflict

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -59,6 +59,7 @@
     "close": "Закрыть"
   },
   "comment": {
+    "emoji": "Эмодзи",
     "writeComment": "Написать комментарий...",
     "edit": "Редактировать",
     "delete": "Удалить",
